# SDCR-CORE

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
domains/interferometry/: __init__.py  plots.py
examples/: neutron_lifetime_null_test.py  visualize_sdcr.py
figures/: sdcr_core_overview.py
notebooks/: SDCR_CORE_V02_COLAB.ipynb  sdcr_interferometry_overview.ipynb
scripts/: run_visualizer.py
sdcr-core/algebra/: quaternionic.py
sdcr-core/core/: __init__.py  observables.py  recovery.py  symmetry.py
sdcr-core/domains/interferometry/: __init__.py  model.py  models.py  plots.py  run.py  runs.py
sdcr-core/domains/neutrinos/: plots.py  run.py
sdcr-core/examples/: neutron_lifetime_sdcr.py  null_test.py  parameter_sweep.py
sdcr-core/tests/: __init__.py  test_observables.py  test_recovery.py  test_symmetry.py
sdcr_core/: __init__.py  run.py
sdcr_core/algebra/: __init__.py  octonionic.py
sdcr_core/core/: __init__.py  dynamics.py  gksl_locked_qubit.py  liouvillian_spectrum.py  null_battery.py  symmetry_selector.py  utils.py  validation.py
sdcr_core/domains/: __init__.py
sdcr_core/domains/interferometry/: __init__.py  models.py  runs.py
sdcr_core/examples/: EXAMPLES_OVERVIEW.md  __init__.py  lindblad_basic.py  neutron_lifetime_null_test.py  neutron_lifetime_sdcr.py  null_test.py
sdcr_core/io/: __init__.py  manifest.py  outputs.py
sdcr_core/tests/: test_interferometry_domain.py  test_observables.py  test_recovery.py  test_symmetry.py
tests/: test_gksl_locked_qubit.py  test_interferometry_domain.py
(+2 files in other folders)
